<resources>
    <string name="app_name">Nike No Air</string>
    <string name="content_text">Nike officially announced its much-anticipated Nike No Air; on October 4. We attended Nike’s London UK event, mirroring the main one taking place in San Francisco, US, where nike give respect to george floyd.</string>
    <string name="content_specs_display">Shandy white</string>
    <string name="content_specs_size">36,37,38,39,40,41,42,43</string>
    <string name="content_specs_category">Shoes</string>
    <string name="content_specs_battery">The heel offered excellent lockdown as did the midfoot. With more time spent on-court you will start to notice the fit loosening up due to the moisture and heat buildup so with that I did have to readjust the lacing after every game or so.

</string>
    <string name="dummy_photos">6 Photos</string>
</resources>